@@ -1,3 +1,12 @@
+Sat Mar 14 23:55:26 UTC 2009  Adam Mitz  <mitza@ociweb.com>
+
+        * performance-tests/DCPS/Priority/Subscriber.h:
+        * performance-tests/DCPS/Priority/Subscriber.cpp:
+
+          Moved operator<< to the global namespace, same as these changes:
+          Thu Jan 22 17:51:27 UTC 2009  Adam Mitz  <mitza@ociweb.com>
+          Wed Feb 11 18:35:38 UTC 2009  Adam Mitz  <mitza@ociweb.com>
+
 Sat Mar 14 16:07:32 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/GuidUtils.h:
